--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -36,3 +36,32 @@ a#link:hover{
 #gallery .mix{
 	display: none;
 }
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
+
+.circle-color
+{
+    border: 2px solid #000;
+    padding: 10px 11px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1%;
+}
